src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@import '../../../../../assets/base/global';
@import '../../../../../assets/modules/section-title';
@import '../../../../../assets/modules/generic-content-container';

.section-title{
  color: grey;
}

.section-description {
  color: grey;
  text-align: center;
  font-size: 1.25rem;
  margin-bottom: 2.5rem;
}

.gallery_container {
  display: flex;
  flex-direction: column;
}

.gallery {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  padding: 10px;

  @include atMedium {
    grid-template-columns: repeat(5, 1fr);
    gap: 10px;
    padding: 10px 100px;
  }
}

.thumbnail {
  width: 100%;
  height: auto;
  cursor: pointer;
  transition: transform 0.3s ease;
  border-radius: 8px;
  margin-bottom: 10px;

  @include atMedium {
    margin: 0;
  }
}

.thumbnail:hover {
  transform: scale(1.1);
  z-index: 2;
}

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.9);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1000;
}

.modal-content {
  max-width: 80%;
  max-height: 80%;
  border-radius: 8px;
}

.close {
  position: absolute;
  top: 30px;
  right: 50px;
  font-size: 40px;
  color: white;
  cursor: pointer;
}

.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  padding: 16px;
  font-size: 40px;
  color: white;
  user-select: none;
  transform: translateY(-50%);
}

.prev {
  left: 20px;
}

.next {
  right: 20px;
}

.btn_gallery {
  margin: 100px auto;
}

